# mikan

./: .gitignore  .travis.yml  NEWS.md  README.md  appveyor.yml
src/test/: CMakeLists.txt
src/test/data/: mir_000.fasta  mir_005.fasta  mir_006.fasta  mir_007.fasta  mir_008.fasta  mir_009.fasta  mir_010.fasta  ts_01_nmer_1.fasta  ts_01_nmer_2.fasta  ts_02_gu_1.fasta  ts_02_gu_2.fasta  ts_03_mm_1.fasta  ts_03_mm_2.fasta  ts_04_mmgu_1.fasta  ts_04_mmgu_2.fasta  ts_05_bt_1.fasta  ts_05_bt_2.fasta  ts_06_bm_1.fasta  ts_06_bm_2.fasta  utr3_000.fasta  utr3_012.fasta  utr3_101.fasta  utr3_103.fasta  utr3_104.fasta  utr3_105.fasta  utr3_106.fasta  utr3_107.fasta  utr3_108.fasta  utr3_109.fasta
src/test/mk_common/: CMakeLists.txt  mi_001.cpp  mi_002.cpp  u3_001.cpp  u3_002.cpp  u3_003.cpp  u3_004.cpp  u3_005.cpp  u3_006.cpp  u3_007.cpp  u3_008.cpp  u3_009.cpp  u3_010.cpp  u3_011.cpp  u3_101.cpp
src/test/mk_miranda/: CMakeLists.txt  mi_001.cpp  output_m001u001.cpp  output_m001u002.cpp  output_m001u003.cpp  output_m001u004.cpp  output_m001u005.cpp  output_m001u006.cpp  output_m001u007.cpp  output_m001u008.cpp  output_m001u009.cpp  output_m001u010.cpp  output_m001u011.cpp  output_m006u103.cpp  read_fasta.cpp  seed_01_all.cpp  seed_01_nmer.cpp  seed_02_gu.cpp  seed_02_nmer.cpp  seed_03_gu.cpp  seed_03_mm.cpp  seed_04_mm.cpp  seed_04_mmgu.cpp  seed_05_bt.cpp  seed_05_mmgu.cpp  seed_06_bt.cpp  seed_bt.cpp  seed_canonical.cpp  seed_gu.cpp  seed_m001.cpp  seed_mm.cpp  seed_mmgu.cpp  site_01_canonical.cpp  site_01_nmer_1.cpp  site_01_nmer_2.cpp  site_02_gu_1.cpp  site_02_gu_2.cpp  site_03_mm_1.cpp  site_03_mm_2.cpp  site_04_mmgu_1.cpp  (+28 more)
src/test/mk_mkens/: CMakeLists.txt  output_m001u001.cpp  output_m001u002.cpp  output_m001u003.cpp  output_m001u004.cpp  output_m001u005.cpp  output_m001u006.cpp  output_m001u007.cpp  output_m001u008.cpp  output_m001u009.cpp  output_m001u010.cpp  output_m001u011.cpp  site_01_nmer_1.cpp  site_01_nmer_2.cpp  site_02_gu_1.cpp  site_02_gu_2.cpp  site_03_mm_1.cpp  site_03_mm_2.cpp  site_04_mmgu_1.cpp  site_04_mmgu_2.cpp  site_05_bt_1.cpp  site_05_bt_2.cpp  site_06_bm_1.cpp  site_06_bm_2.cpp  site_output_01_nmer_1.cpp  site_output_01_nmer_2.cpp  site_output_02_gu_1.cpp  site_output_02_gu_2.cpp  site_output_03_mm_1.cpp  site_output_03_mm_2.cpp  site_output_04_mmgu_1.cpp  site_output_04_mmgu_2.cpp  site_output_05_bt_1.cpp  site_output_05_bt_2.cpp  site_output_06_bm_1.cpp  site_output_06_bm_2.cpp
src/test/mk_pita/: CMakeLists.txt  output_m001u001.cpp  output_m001u002.cpp  output_m001u003.cpp  output_m001u004.cpp  output_m001u005.cpp  output_m001u006.cpp  output_m001u007.cpp  output_m001u008.cpp  output_m001u009.cpp  output_m001u010.cpp  output_m001u011.cpp  output_m005u102.cpp  seed_01_all.cpp  seed_02_nmer.cpp  seed_03_gu.cpp  seed_04_mm.cpp  seed_05_mmgu.cpp  site_01_nmer_1.cpp  site_01_nmer_2.cpp  site_02_gu_1.cpp  site_02_gu_2.cpp  site_03_mm_1.cpp  site_03_mm_2.cpp  site_04_mmgu_1.cpp  site_04_mmgu_2.cpp  site_05_bt_1.cpp  site_05_bt_2.cpp  site_06_bm_1.cpp  site_06_bm_2.cpp  site_output_01_nmer_1.cpp  site_output_01_nmer_2.cpp  site_output_02_gu_1.cpp  site_output_02_gu_2.cpp  site_output_03_mm_1.cpp  site_output_03_mm_2.cpp  site_output_04_mmgu_1.cpp  site_output_04_mmgu_2.cpp  site_output_05_bt_1.cpp  site_output_05_bt_2.cpp  (+2 more)
src/test/mk_rh2/: CMakeLists.txt  output_m001u001.cpp  output_m001u002.cpp  output_m001u003.cpp  output_m001u004.cpp  output_m001u005.cpp  output_m001u006.cpp  output_m001u007.cpp  output_m001u008.cpp  output_m001u009.cpp  output_m001u010.cpp  output_m001u011.cpp  output_m007u104.cpp  seed_01_all.cpp  seed_01_nmer.cpp  seed_02_gu.cpp  seed_02_nmer.cpp  seed_03_gu.cpp  site_01_nmer_1.cpp  site_01_nmer_2.cpp  site_02_gu_1.cpp  site_02_gu_2.cpp  site_03_mm_1.cpp  site_03_mm_2.cpp  site_04_mmgu_1.cpp  site_04_mmgu_2.cpp  site_05_bt_1.cpp  site_05_bt_2.cpp  site_06_bm_1.cpp  site_06_bm_2.cpp  site_output_01_nmer_1.cpp  site_output_01_nmer_2.cpp  site_output_02_gu_1.cpp  site_output_02_gu_2.cpp  site_output_03_mm_1.cpp  site_output_03_mm_2.cpp  site_output_04_mmgu_1.cpp  site_output_04_mmgu_2.cpp  site_output_05_bt_1.cpp  site_output_05_bt_2.cpp  (+2 more)
src/test/mk_tm1/: CMakeLists.txt  output_m001u001.cpp  output_m001u002.cpp  output_m001u003.cpp  output_m001u004.cpp  output_m001u005.cpp  output_m001u006.cpp  output_m001u007.cpp  output_m001u008.cpp  output_m001u009.cpp  output_m001u010.cpp  output_m001u011.cpp  output_m003u106.cpp  output_m008u105.cpp  output_m010u109.cpp  seed_01_all.cpp  site_01_nmer_1.cpp  site_01_nmer_2.cpp  site_02_gu_1.cpp  site_02_gu_2.cpp  site_03_mm_1.cpp  site_03_mm_2.cpp  site_04_mmgu_1.cpp  site_04_mmgu_2.cpp  site_05_bt_1.cpp  site_05_bt_2.cpp  site_06_bm_1.cpp  site_06_bm_2.cpp  site_output_01_nmer_1.cpp  site_output_01_nmer_2.cpp  site_output_02_gu_1.cpp  site_output_02_gu_2.cpp  site_output_03_mm_1.cpp  site_output_03_mm_2.cpp  site_output_04_mmgu_1.cpp  site_output_04_mmgu_2.cpp  site_output_05_bt_1.cpp  site_output_05_bt_2.cpp  site_output_06_bm_1.cpp  site_output_06_bm_2.cpp
src/test/mk_ts5/: CMakeLists.txt  output_m001u001.cpp  output_m001u002.cpp  output_m001u003.cpp  output_m001u004.cpp  output_m001u005.cpp  output_m001u006.cpp  output_m001u007.cpp  output_m001u008.cpp  output_m001u009.cpp  output_m001u010.cpp  output_m001u011.cpp  output_m004u108.cpp  output_m009u107.cpp  seed_01_all.cpp  site_01_nmer_1.cpp  site_01_nmer_2.cpp  site_02_gu_1.cpp  site_02_gu_2.cpp  site_03_mm_1.cpp  site_03_mm_2.cpp  site_04_mmgu_1.cpp  site_04_mmgu_2.cpp  site_05_bt_1.cpp  site_05_bt_2.cpp  site_06_bm_1.cpp  site_06_bm_2.cpp  site_output_01_nmer_1.cpp  site_output_01_nmer_2.cpp  site_output_02_gu_1.cpp  site_output_02_gu_2.cpp  site_output_03_mm_1.cpp  site_output_03_mm_2.cpp  site_output_04_mmgu_1.cpp  site_output_04_mmgu_2.cpp  site_output_05_bt_1.cpp  site_output_05_bt_2.cpp  site_output_06_bm_1.cpp  site_output_06_bm_2.cpp
src/test/mk_tssvm/: CMakeLists.txt  output_m001u001.cpp  output_m001u002.cpp  output_m001u003.cpp  output_m001u004.cpp  output_m001u005.cpp  output_m001u006.cpp  output_m001u007.cpp  output_m001u008.cpp  (+28 more)
(+862 files in other folders)
